--- a/index.html
+++ b/index.html
@@ -3,12 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,51 +17,70 @@
     />
     <link rel="stylesheet" href="./assets/styles.css" />
     <script defer src="./assets/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.slim.js" integrity="sha256-DKU1CmJ8kBuEwumaLuh9Tl/6ZB6jzGOBV/5YpNE2BWc=" crossorigin="anonymous"></script>
     <title>Frontend Mentor | Interactive card details form</title>
   </head>
   <body>
-    <main class="container-fluid bg-light vh-100">
+    <main class="container-fluid vh-100">
       <div class="row bg-main-desktop h-100 align-items-center">
         <div class="container justify-content-center">
-          <div class="row h-100 align-items-center">
-            <div class="col-md-7 p-0">
+          <div class="row h-100 align-items-center justify-content-center">
+            <div class="col-md-5 p-0">
               <div class="row justify-content-center">
                 <div class="card-front">
-                  
+                  <div class="row m-0">
+                    <div class="col-md-2">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-circle-fill text-white" viewBox="0 0 16 16">
+                        <circle cx="8" cy="8" r="8"/>
+                      </svg>
+                    </div>
+                    <div class="col-md-2 my-auto">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                      </svg>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div id="fill-number"></div>
+                  </div>
+                  <div class="row">
+                    <div id="fill-name"></div>
+                    <span id="fill-date"></span>
+                  </div>
                 </div>
               </div>
-              <div class="row justify-content-center mt-4">
+              <div class="row justify-content-center">
                 <div class="card-back">
                   
                 </div>
               </div>
             </div>
-            <div class="col-md-5 p-0 ms-n1" id="dataCard">
+            <div class="col-md-4 p-0 ms-n1" id="dataCard">
               <form id="card-data">
-                <div class="mb-3">
+                <div class="mb-4">
                   <label for="inputCardName" class="form-label">Cardholder Name</label>
-                  <input type="text" class="form-control" id="inputCardName" placeholder="e.g. Jane Appleseed">
+                  <input type="text" class="form-control" id="inputCardName" placeholder="e.g. Jane Appleseed" required>
                 </div>
-                <div class="mb-3">
+                <div class="mb-4">
                   <label for="inputCardNumber" class="form-label">Card Number</label>
-                  <input type="text" class="form-control" id="inputCardNumber" placeholder="e.g. 1234 5678 9123 0000">
+                  <input type="text" class="form-control" id="inputCardNumber" placeholder="e.g. 1234 5678 9123 0000" required>
                 </div>
-                <div class="row mb-3">
+                <div class="row mb-4">
                   <div class="col-6 form-group">
                     <div>
                         <label for="inputExpDate" class="form-label">Exp. Date (mm/yy)</label>
                     </div>
                     <div class="form-inline">
-                        <input type="text" class="d-inline-block form-control" style="width:40%" id="inputExpDate" placeholder="MM">
-                        <input type="text" class="d-inline-block form-control" style="width:40%" id="inputCardName" placeholder="YY">
+                        <input type="text" class="d-inline-block form-control" id="inputExpDate" placeholder="MM" required>
+                        <input type="text" class="d-inline-block form-control" id="inputExpDate" placeholder="YY" required>
                     </div>
                   </div>
                   <div class="col-6">
                     <label for="inputExpDate" class="form-label">CVC</label>
-                    <input type="text" class="form-control" id="inputExpDate" placeholder="e.g. 123">
+                    <input type="text" class="form-control w-100" id="inputExpDate" placeholder="e.g. 123" required>
                   </div>
                 </div>
-                <button type="button" class="btn w-100">Confirm</button>
+                <button type="button" class="btn w-100 mt-2">Confirm</button>
               </form>
             </div>
           </div>
