--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/styles.css" />
-    <script defer src="./assets/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.slim.js" integrity="sha256-DKU1CmJ8kBuEwumaLuh9Tl/6ZB6jzGOBV/5YpNE2BWc=" crossorigin="anonymous"></script>
+    <script defer src="./assets/main.js"></script>
+    
     <title>Frontend Mentor | Interactive card details form</title>
   </head>
   <body>
@@ -28,7 +29,7 @@
             <div class="col-md-5 p-0">
               <div class="row justify-content-center">
                 <div class="card-front">
-                  <div class="row m-0">
+                  <div class="row">
                     <div class="col-md-2">
                       <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-circle-fill text-white" viewBox="0 0 16 16">
                         <circle cx="8" cy="8" r="8"/>
@@ -41,17 +42,23 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div id="fill-number"></div>
+                    <div id="fill-number">0000 0000 0000 0000</div>
                   </div>
-                  <div class="row">
-                    <div id="fill-name"></div>
-                    <span id="fill-date"></span>
+                  <div class="row justify-content-between">
+                    <div class="col-9">
+                      <div id="fill-name">Jane Appleseed</div>
+                    </div>
+                    <div class="col-3 text-end">
+                      <span id="fill-date-month">00</span>
+                      <span>/</span>
+                      <span id="fill-date-year">00</span>
+                    </div>
                   </div>
                 </div>
               </div>
               <div class="row justify-content-center">
-                <div class="card-back">
-                  
+                <div class="card-back align-items-center d-flex justify-content-end">
+                  <div id="fill-cvc">000</div>
                 </div>
               </div>
             </div>
@@ -59,11 +66,11 @@
               <form id="card-data">
                 <div class="mb-4">
                   <label for="inputCardName" class="form-label">Cardholder Name</label>
-                  <input type="text" class="form-control" id="inputCardName" placeholder="e.g. Jane Appleseed" required>
+                  <input type="text" class="form-control" id="inputCardName" placeholder="e.g. Jane Appleseed" data-target="inputCardName" required>
                 </div>
                 <div class="mb-4">
                   <label for="inputCardNumber" class="form-label">Card Number</label>
-                  <input type="text" class="form-control" id="inputCardNumber" placeholder="e.g. 1234 5678 9123 0000" required>
+                  <input type="text" class="form-control" id="inputCardNumber" placeholder="e.g. 1234 5678 9123 0000" data-target="inputCardNumber" required>
                 </div>
                 <div class="row mb-4">
                   <div class="col-6 form-group">
@@ -71,13 +78,13 @@
                         <label for="inputExpDate" class="form-label">Exp. Date (mm/yy)</label>
                     </div>
                     <div class="form-inline">
-                        <input type="text" class="d-inline-block form-control" id="inputExpDate" placeholder="MM" required>
-                        <input type="text" class="d-inline-block form-control" id="inputExpDate" placeholder="YY" required>
+                        <input type="text" class="d-inline-block form-control" id="inputExpDateM" placeholder="MM" data-target="inputCardMonth" required>
+                        <input type="text" class="d-inline-block form-control" id="inputExpDateY" placeholder="YY"  data-target="inputCardYear"required>
                     </div>
                   </div>
                   <div class="col-6">
-                    <label for="inputExpDate" class="form-label">CVC</label>
-                    <input type="text" class="form-control w-100" id="inputExpDate" placeholder="e.g. 123" required>
+                    <label for="inputCardCvc" class="form-label">CVC</label>
+                    <input type="text" class="form-control w-100" id="inputCardCvc" placeholder="e.g. 123"  data-target="inputCardCvc" required>
                   </div>
                 </div>
                 <button type="button" class="btn w-100 mt-2">Confirm</button>
