--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 p-0 ms-n1" id="dataCard">
+            <div class="col-md-4 p-0" id="dataCard">
               <form id="card-data">
                 <div class="mb-4">
                   <label for="inputCardName" class="form-label">Cardholder Name</label>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="mb-4">
                   <label for="inputCardNumber" class="form-label">Card Number</label>
-                  <input type="text" class="form-control" id="inputCardNumber" placeholder="e.g. 1234 5678 9123 0000" data-target="inputCardNumber" required>
+                  <input type="text" class="form-control" id="inputCardNumber" placeholder="e.g. 1234 5678 9123 0000" data-target="inputCardNumber" maxlength="19" minlength="19" required>
                 </div>
                 <div class="row mb-4">
                   <div class="col-6 form-group">
@@ -78,45 +78,22 @@
                         <label for="inputExpDate" class="form-label">Exp. Date (mm/yy)</label>
                     </div>
                     <div class="form-inline">
-                        <input type="text" class="d-inline-block form-control" id="inputExpDateM" placeholder="MM" data-target="inputCardMonth" required>
-                        <input type="text" class="d-inline-block form-control" id="inputExpDateY" placeholder="YY"  data-target="inputCardYear"required>
+                        <input type="text" class="d-inline-block form-control" id="inputExpDateM" placeholder="MM" data-target="inputCardMonth" minlength="2" maxlength="2" required>
+                        <input type="text" class="d-inline-block form-control" id="inputExpDateY" placeholder="YY"  data-target="inputCardYear" minlength="2" maxlength="2" required>
                     </div>
                   </div>
                   <div class="col-6">
                     <label for="inputCardCvc" class="form-label">CVC</label>
-                    <input type="text" class="form-control w-100" id="inputCardCvc" placeholder="e.g. 123"  data-target="inputCardCvc" required>
+                    <input type="text" class="form-control w-100" id="inputCardCvc" placeholder="e.g. 123"  data-target="inputCardCvc" maxlength="3" required>
                   </div>
                 </div>
-                <button type="button" class="btn w-100 mt-2">Confirm</button>
+                <button type="button" class="btn w-100 mt-2" id="submit-form">Confirm</button>
               </form>
             </div>
           </div>
         </div>
       </div>
     </main>
-
-    <!-- 0000 0000 0000 0000
-  Jane Appleseed
-  00/00
-
-  000
-
-  Cardholder Name
-  e.g. Jane Appleseed
-
-  Card Number
-  e.g. 1234 5678 9123 0000
-
-  Exp. Date (MM/YY)
-  MM
-  YY
-
-  CVC
-  e.g. 123
-
-  Confirm -->
-
-    <!-- Completed state start -->
 
     <!-- Thank you!
   We've added your card details
